@@ -41,6 +41,8 @@ extern HWND			g_hDlgExit;
 extern HWND			g_hDlgAbout;
 
 
+Bool winInBlockHandler = FALSE;
+
 /* See Porting Layer Definition - p. 6 */
 void
 winBlockHandler (int nScreen,
@@ -87,6 +89,9 @@ winBlockHandler (int nScreen,
 winBlockHandler_ProcessMessages:
 #endif
 
+
+
+  winInBlockHandler = TRUE;
   /* Process all messages on our queue */
   while (PeekMessage (&msg, NULL, 0, 0, PM_REMOVE))
     {
@@ -100,4 +105,5 @@ winBlockHandler_ProcessMessages:
 	  DispatchMessage (&msg);
 	}
     }
+  winInBlockHandler = FALSE;
 }
